add switch buttons (login and register) functionality

--- a/login/login.html
+++ b/login/login.html
@@ -10,10 +10,10 @@
         <div class="container">
             <div class="switch-bar">
                 <div class="switch-login active-form">
-                    <span class="switch-button-text">LOGIN</span>
+                    <span class="switch-button-text">Login</span>
                 </div>
                 <div class="switch-register">
-                    <span class="switch-button-text">REGISTER</span>
+                    <span class="switch-button-text">Register</span>
                 </div>
             </div>
             <div class="container-form">
@@ -23,6 +23,8 @@
                   <input name="email" type="email" placeholder="test@test.com">
                   <label for="password" class="labels">Password</label>
                   <input name="password" type="password" placeholder="password">
+                  <label for="confirmation" class="labels confirm hide">Confirm password</label>
+                  <input name="confirmation" type="password" placeholder="same password" class="confirm hide">
                 </div>
                 <button type="submit" class="submit-button">Submit</button>
               </form>
