Interfata terminata, noutati terminate, astept feedback

--- a/Interfatav2/interfata.html
+++ b/Interfatav2/interfata.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FirstPage</title>
     <link rel="stylesheet" href="Interfata.css">
-    <script src="interfata.js"></script>
+    <script src="HamburgerMenu.js"></script>
 </head>
 <body>
     <header>
-        <!-- <div class="page-header"> -->
         <div>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -40,7 +39,7 @@
     <section>
         <div class="container">
             <img src="logo.svg" alt="Login"></img>
-            <button><a href="#">Enter</a></button>
+            <button><a href="noutati.html">Enter</a></button>
         </div>
         
     </section>
