--- a/Interfatav2/noutati.html
+++ b/Interfatav2/noutati.html
@@ -4,8 +4,169 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noutati</title>
+    <link rel="stylesheet" href="noutati.css">
+    <script src="HamburgerMenu.js"></script>
+    <script src="dropdown.js"></script>
 </head>
 <body>
+    <header>
+        <div>
+                <div id="mySidenav" class="sidenav">
+                    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                    <a href="#">Noutati</a>
+                    <a href="#">Postari</a>
+                    <a href="#">Statistici</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div>
+                    <img src="logo.svg" id="miniLogo"></img>
+                </div>
+                <div>
+                    <a href="#" id="userLogin">
+                        <span>
+                            <div>Login</div>
+                            <img src="user.svg" alt="Login"></img>
+                        </span>
+                    </a>
+                </div> 
+                <div class="headerMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">
+                    <div class="hamburger"></div>
+                    <div class="hamburger"></div>
+                    <div class="hamburger"></div>
+                </div>        
+        </div>    
+    </header>
+    <section>
+        <div class="PageHeader">
+            <p>Noutati</p>
+            <div class="sticky-bar">   
+            <button onclick="dropdown()" class="dropbutton"><span>Filters</span></button>
+                <div id="myDropdown" class="dropdown-content">       
+                    <input list="europe-countries" placeholder="Cauta tara de origine..." class="inputs">
+                        <datalist id="europe-countries">
+                            <option>Russia</option>
+                            <option>Germany</option>
+                            <option>United Kingdom</option>
+                            <option>France</option>
+                            <option>Italy</option>
+                            <option>Spain</option>
+                            <option>Ukraine</option>
+                            <option>Poland</option>
+                            <option>Romania</option>
+                            <option>Netherlands</option>
+                            <option>Belgium</option>
+                            <option>Czech Republic</option>
+                            <option>Greece</option>
+                            <option>Portugal</option>
+                            <option>Sweden</option>
+                            <option>Hungary</option>
+                            <option>Belarus</option>
+                            <option>Austria</option>
+                            <option>Serbia</option>
+                            <option>Switzerland</option>
+                            <option>Bulgaria</option>
+                            <option>Denmark</option>
+                            <option>Finland</option>
+                            <option>Slovakia</option>
+                            <option>Norway</option>
+                            <option>Ireland</option>
+                            <option>Croatia</option>
+                            <option>Moldova</option>
+                            <option>Bosnia and Herzegovina</option>
+                            <option>Albania</option>
+                            <option>Lithuania</option>
+                            <option>North Macedonia</option>
+                            <option>Slovenia</option>
+                            <option>Latvia</option>
+                            <option>Estonia</option>
+                            <option>Montenegro</option>
+                            <option>Luxembourg</option>
+                            <option>Malta</option>
+                            <option>Iceland</option>
+                        </datalist>
+                    <input list="post-type" placeholder="Cauta tipul de colectie..." class="inputs">
+                        <datalist id="post-type">
+                            <option>Capac</option>
+                            <option>Dop</option>
+                            <option>Eticheta</option>
+                        </datalist>
+                    <input list="price-range" placeholder="Cauta pretul..." class="inputs">
+                        <datalist id="price-range">
+                            <option>Sub 100</option>
+                            <option>100-200</option>
+                            <option>200-500</option>
+                            <option>500-1.000</option>
+                            <option>1.000-1.500</option>
+                            <option>1.500-2.000</option>
+                            <option>2.000-3.000</option>
+                            <option>3.000-4.000</option>
+                            <option>4.000-5.000</option>
+                            <option>Peste 5.000</option>
+                        </datalist>
+                    <input list="state" placeholder="Cauta starea curenta..." class="inputs">
+                        <datalist id="state">
+                            <option>Intact</option>
+                            <option>Degradat</option>
+                        </datalist>
+                </div>
+            </div>    
+        </div>
+
+        <div class="basic-grid">
+            <div class="container">
+                <img src="krumbach.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="coca.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult...</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="duf.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="rafts.jpeg" id="smallImg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="lotofcaps.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="alotsofcaps.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+            <div class="container">
+                <img src="gin.jfif">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+            </div>
+            <div class="container">
+                <img src="jhonniewalker.jpeg ">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+            </div>
+            <div class="container">
+                <img src="krumbach.jpeg">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
+                    <a href="#">Vezi mai mult..</a>
+                </p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
