Asezat in fisiere, mici modificari pe front

--- a/html/noutati.html
+++ b/html/noutati.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noutati</title>
-    <link rel="stylesheet" href="noutati.css">
-    <script src="HamburgerMenu.js"></script>
-    <script src="dropdown.js"></script>
+    <link rel="stylesheet" href="../css/noutati.css">
 </head>
 <body>
     <header>
@@ -19,13 +17,13 @@
                     <a href="#">Contact</a>
                 </div>
                 <div>
-                    <img src="logo.svg" id="miniLogo"></img>
+                    <img src="../assets/logo.svg" id="miniLogo"></img>
                 </div>
                 <div>
                     <a href="#" id="userLogin">
                         <span>
                             <div>Login</div>
-                            <img src="user.svg" alt="Login"></img>
+                            <img src="../assets/user.svg" alt="Login"></img>
                         </span>
                     </a>
                 </div> 
@@ -38,7 +36,7 @@
     </header>
     <section>
         <div class="PageHeader">
-            <p>Noutati</p>
+            <p id="headerTitle">Noutati</p>
             <div class="sticky-bar">   
             <button onclick="dropdown()" class="dropbutton"><span>Filters</span></button>
                 <div id="myDropdown" class="dropdown-content">       
@@ -114,53 +112,53 @@
 
         <div class="basic-grid">
             <div class="container">
-                <img src="krumbach.jpeg">
+                <img src="../assets/krumbach.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
             <div class="container">
-                <img src="coca.jpeg">
+                <img src="../assets/coca.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult...</a>
                 </p>
             </div>
             <div class="container">
-                <img src="duf.jpeg">
+                <img src="../assets/duf.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
             <div class="container">
-                <img src="rafts.jpeg" id="smallImg">
+                <img src="../assets/rafts.jpeg" id="smallImg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
             <div class="container">
-                <img src="lotofcaps.jpeg">
+                <img src="../assets/lotofcaps.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
             <div class="container">
-                <img src="alotsofcaps.jpeg">
+                <img src="../assets/alotsofcaps.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
             <div class="container">
-                <img src="gin.jfif">
+                <img src="../assets/gin.jfif">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
             </div>
             <div class="container">
-                <img src="jhonniewalker.jpeg ">
+                <img src="../assets/jhonniewalker.jpeg ">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
             </div>
             <div class="container">
-                <img src="krumbach.jpeg">
+                <img src="../assets/krumbach.jpeg">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident excepturi ducimus iste consectetur praesentium sed expedita rem error illum commodi.
                     <a href="#">Vezi mai mult..</a>
                 </p>
@@ -168,5 +166,9 @@
         </div>
     </section>
     
+    <script src="../js/HamburgerMenu.js"></script>
+    <script src="../js/dropdown.js"></script>
+    <script src="../js/shrinkHeaderTitle.js"></script>
+
 </body>
 </html>
