--- a/html/upload.html
+++ b/html/upload.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Upload</title>
-        <script src="HamburgerMenu.js"></script>
-        <link rel="stylesheet" href="upload.css">
-        <link rel="stylesheet" href="noutati.css">
+        <script src="../js/HamburgerMenu.js"></script>
+        <link rel="stylesheet" href="../css/upload.css">
+        <link rel="stylesheet" href="../css/noutati.css">
     </head>
     <body>
         <header>
@@ -19,13 +19,13 @@
                     <a href="#">Contact</a>
                 </div>
                 <div>
-                    <img src="logo.svg" id="miniLogo"></img>
+                    <img src="../assets/logo.svg" id="miniLogo"></img>
                 </div>
                 <div>
                     <a href="#" id="userLogin">
                         <span>
                             <div>Login</div>
-                            <img src="user.svg" alt="Login"></img>
+                            <img src="../assets/user.svg" alt="Login"></img>
                         </span>
                     </a>
                 </div> 
