--- a/html/login.html
+++ b/html/login.html
@@ -1,18 +1,10 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport"/>
-    <link rel="stylesheet" href="./login.css">
-    <title>Login COLRW</title>
-  </head>
-  <body>
-    <div class="page">
+    <div class="login-page">
         <div class="container">
             <div class="switch-bar">
-                <div class="switch-login active-form">
+                <div class="switch-login active-form" onclick="onClickLogin(event)">
                     <span class="switch-button-text">Login</span>
                 </div>
-                <div class="switch-register">
+                <div class="switch-register" onclick="onClickRegister(event)">
                     <span class="switch-button-text">Register</span>
                 </div>
             </div>
@@ -29,9 +21,7 @@
                 <button type="submit" class="submit-button">Submit</button>
               </form>
             </div>
-
         </div>
     </div>
-    <script src='login.js'></script>
-  </body>
-</html>
+
+
