Updated html, ajax content loader, indexes

--- a/html/export.html
+++ b/html/export.html
@@ -31,9 +31,10 @@
             </li>
           </ul>
         </div>
-        <div style="margin-top: 1rem;">
+        <div style="margin-top: 2rem; align-content: space-between;">
           <a class="btn" onclick="removeElement()">Goleste lista</a>
-          <a class="btn" onclick="">Export</a>
+          <a class="btn" onclick="">Export CSV</a>
+          <a class="btn" onclick="">Export DocBook</a>
         </div>
       </div>
     </div>
