--- a/html/noutati.html
+++ b/html/noutati.html
@@ -38,7 +38,7 @@
         <div class="PageHeader">
             <p id="headerTitle">Noutati</p>
             <div class="sticky-bar">   
-            <button onclick="dropdown()" class="dropbutton"><span>Filters</span></button>
+            <button onclick="dropdown()"><span>Filters</span></button>
                 <div id="myDropdown" class="dropdown-content">       
                     <input list="europe-countries" placeholder="Cauta tara de origine..." class="inputs">
                         <datalist id="europe-countries">
@@ -163,6 +163,10 @@
                     <a href="#">Vezi mai mult..</a>
                 </p>
             </div>
+        </div>
+        <div class="button_container">
+            <a class="mybutton" onclick="">Previous</a>
+            <a class="mybutton" onclick="">Next</a>
         </div>
     </section>
     
