Export list and buttons

--- a/html/export.html
+++ b/html/export.html
@@ -4,37 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Export</title>
-    <link rel="stylesheet" href="../css/export.css" />
+    <link rel="stylesheet" href="../css/export_new.css" />
   </head>
   <body>
     <div class="page">
       <div class="container">
-        <div id="listView">
-          <ul id="myList" class="myList-class">
-            <li>
-              <img src="../assets/coca.jpeg" class="size" />
-              <div class="description">
-                <p>Titlu/Denumire</p>
-              </div>
-            </li>
-            <li>
-              <img src="../assets/jhonniewalker.jpeg " class="size" />
-              <div class="description">
-                <p>Titlu/Denumire</p>
-              </div>
-            </li>
-            <li>
-              <img src="../assets/coca.jpeg" class="size" />
-              <div class="description">
-                <p>Titlu/Denumire</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div style="margin-top: 2rem; align-content: space-between;">
-          <a class="btn" onclick="removeElement()">Goleste lista</a>
-          <a class="btn" onclick="">Export CSV</a>
-          <a class="btn" onclick="">Export DocBook</a>
+      </div>
+      <div class="export_buttons">
+        <button>Export CSV</button>
+        <button>Export DocBook</button>
+      </div>  
+      </div>
         </div>
       </div>
     </div>
