--- a/html/gallery.html
+++ b/html/gallery.html
@@ -1,5 +1,5 @@
 <div class="PageHeader">
-  <p id="headerTitle">Noutati</p>
+  <p id="headerTitle">Articles</p>
   <div class="sticky-bar">
     <button onclick="dropdown()"><span>Filters</span></button>
     <div id="filters"></div>
