--- a/html/header.html
+++ b/html/header.html
@@ -1,9 +1,9 @@
 <div>
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">Noutati</a>
-        <a href="#">Postari</a>
-        <a href="#">Statistici</a>
+        <a href="#">News</a>
+        <a href="#">Export</a>
+        <a href="#">My articles</a>
         <a href="#">Contact</a>
     </div>
     <div>
