--- a/html/filters.html
+++ b/html/filters.html
@@ -1,84 +1,94 @@
 <div id="myDropdown" class="dropdown-content">
-  <input
-    list="europe-countries"
-    placeholder="Cauta tara de origine..."
-    class="inputs"
-  />
-  <datalist id="europe-countries">
-    <option>Russia</option>
-    <option>Germany</option>
-    <option>United Kingdom</option>
-    <option>France</option>
-    <option>Italy</option>
-    <option>Spain</option>
-    <option>Ukraine</option>
-    <option>Poland</option>
-    <option>Romania</option>
-    <option>Netherlands</option>
-    <option>Belgium</option>
-    <option>Czech Republic</option>
-    <option>Greece</option>
-    <option>Portugal</option>
-    <option>Sweden</option>
-    <option>Hungary</option>
-    <option>Belarus</option>
-    <option>Austria</option>
-    <option>Serbia</option>
-    <option>Switzerland</option>
-    <option>Bulgaria</option>
-    <option>Denmark</option>
-    <option>Finland</option>
-    <option>Slovakia</option>
-    <option>Norway</option>
-    <option>Ireland</option>
-    <option>Croatia</option>
-    <option>Moldova</option>
-    <option>Bosnia and Herzegovina</option>
-    <option>Albania</option>
-    <option>Lithuania</option>
-    <option>North Macedonia</option>
-    <option>Slovenia</option>
-    <option>Latvia</option>
-    <option>Estonia</option>
-    <option>Montenegro</option>
-    <option>Luxembourg</option>
-    <option>Malta</option>
-    <option>Iceland</option>
-  </datalist>
-  <input
-    list="post-type"
-    placeholder="Cauta tipul de colectie..."
-    class="inputs"
-  />
-  <datalist id="post-type">
-    <option>Capac</option>
-    <option>Dop</option>
-    <option>Eticheta</option>
-  </datalist>
-  <input list="price-range" placeholder="Cauta pretul..." class="inputs" />
-  <datalist id="price-range">
-    <option>Sub 100</option>
-    <option>100-200</option>
-    <option>200-500</option>
-    <option>500-1.000</option>
-    <option>1.000-1.500</option>
-    <option>1.500-2.000</option>
-    <option>2.000-3.000</option>
-    <option>3.000-4.000</option>
-    <option>4.000-5.000</option>
-    <option>Peste 5.000</option>
-  </datalist>
-  <input list="state" placeholder="Cauta starea curenta..." class="inputs" />
-  <datalist id="state">
-    <option>Intact</option>
-    <option>Degradat</option>
-  </datalist>
+  <form action="">
+    <input
+      list="europe-countries"
+      placeholder="Cauta tara de origine..."
+      class="inputs"
+    />
+    <datalist id="europe-countries">
+      <option value="Russia">Russia</option>
+      <option value="Germany">Germany</option>
+      <option value="United Kingdom">United Kingdom</option>
+      <option value="France">France</option>
+      <option value="Italy">Italy</option>
+      <option value="Spain">Spain</option>
+      <option value="Ukraine">Ukraine</option>
+      <option value="Poland">Poland</option>
+      <option value="Romania">Romania</option>
+      <option value="Netherlands">Netherlands</option>
+      <option value="Belgium">Belgium</option>
+      <option value="Czech Republic">Czech Republic</option>
+      <option value="Greece">Greece</option>
+      <option value="Portugal">Portugal</option>
+      <option value="Sweden">Sweden</option>
+      <option value="Hungary">Hungary</option>
+      <option value="Belarus">Belarus</option>
+      <option value="Austria">Austria</option>
+      <option value="Serbia">Serbia</option>
+      <option value="Switzerland">Switzerland</option>
+      <option value="Bulgaria">Bulgaria</option>
+      <option value="Denmark">Denmark</option>
+      <option value="Finland">Finland</option>
+      <option value="Slovakia">Slovakia</option>
+      <option value="Norway">Norway</option>
+      <option value="Ireland">Ireland</option>
+      <option value="Croatia">Croatia</option>
+      <option value="Moldova">Moldova</option>
+      <option value="Bosnia and Herzegovina">Bosnia and Herzegovina</option>
+      <option value="Albania">Albania</option>
+      <option value="Lithuania">Lithuania</option>
+      <option value="North Macedonia">North Macedonia</option>
+      <option value="Slovenia">Slovenia</option>
+      <option value="Latvia">Latvia</option>
+      <option value="Estonia">Estonia</option>
+      <option value="Montenegro">Montenegro</option>
+      <option value="Luxembourg">Luxembourg</option>
+      <option value="Malta">Malta</option>
+      <option value="Iceland">Iceland</option>
+    </datalist>
+    <input
+      list="post-type"
+      placeholder="Cauta tipul de colectie..."
+      class="inputs"
+    />
+    <datalist id="post-type">
+      <option value="Capac">Capac</option>
+      <option value="Dop">Dop</option>
+      <option value="Eticheta">Eticheta</option>
+    </datalist>
+    <input list="price-range" placeholder="Cauta pretul..." class="inputs" />
+    <datalist id="price-range">
+      <option value="Sub 100"></option>
+      <option value="100-200"></option>
+      <option value="200-500"></option>
+      <option value="500-1.000"</option>
+      <option value="1.000-1.500"></option>
+      <option value="1.500-2.000"></option>
+      <option value="2.000-3.000"></option>
+      <option value="3.000-4.000"></option>
+      <option value="4.000-5.000"></option>
+      <option value="Peste 5.000"></option>
+    </datalist>
+    <input list="state" placeholder="Cauta starea curenta..." class="inputs" />
+    <datalist id="state">
+      <option value="Intact">Intact</option>
+      <option value="Degradat">Degradat</option>
+    </datalist>
+  </form>
   <!-- <form action="">
-    <select name="Tara de origine" onchange="showCountry(this.value)">
+    <select name="originCounty" onchange="showCountry(this.value)">
       <option value="">Tara de origine:</option>
       <option value="Oldanda">Olanda</option>
       <option value="Romania ">Romania</option>
       <option value="Polonia">Polonia</option>
+    </select>
+  </form>
+  <form action="">
+    <select name="collectionType" onchange="showCollection(this.value)">
+      <option value="">Tipul de articol:</option>
+      <option value="Oldanda">Capac</option>
+      <option value="Romania ">Dop</option>
+      <option value="Polonia">Eticheta</option>
     </select>
   </form> -->
 </div>
