Updated gallery, created modal, added ajax tests

--- a/html/export.html
+++ b/html/export.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Export</title>
-    <link rel="stylesheet" href="../css/export_new.css" />
+    <link rel="stylesheet" href="../css/export.css" />
   </head>
   <body>
     <div class="page">
       <div class="container">
       </div>
       <div class="export_buttons">
-        <button>Export CSV</button>
-        <button>Export DocBook</button>
+        <button id="CSV">Export CSV</button>
+        <button id="DOC">Export DocBook</button>
       </div>  
       </div>
         </div>
       </div>
     </div>
 
+    <script src="../js/export_list.js"></script>
     <script src="../js/export.js"></script>
   </body>
 </html>
