--- a/html/noutati_separate/gallery.html
+++ b/html/noutati_separate/gallery.html
@@ -13,8 +13,19 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#popup_content" class="pop_button" onclick="openPopup()">Show more</a>
       </p>
+      
+        <div id="popup_content" class="overlay">
+          <div class="popup">
+            <h2>Title</h2>
+            <span class="close" onclick="closePopup()">x</span>
+            <div class="overlay_content">
+              <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+          </div>
+        </div>
+        
     </div>
     <div class="container">
       <img src="../assets/coca.jpeg" />
@@ -22,7 +33,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult...</a>
+        <a href="#">Show more</a>
       </p>
     </div>
     <div class="container">
@@ -31,7 +42,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
     <div class="container">
@@ -40,7 +51,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
     <div class="container">
@@ -49,7 +60,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
     <div class="container">
@@ -58,7 +69,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
     <div class="container">
@@ -67,7 +78,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
 
@@ -77,7 +88,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
 
@@ -87,7 +98,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
         excepturi ducimus iste consectetur praesentium sed expedita rem error
         illum commodi.
-        <a href="#">Vezi mai mult..</a>
+        <a href="#">Show more</a>
       </p>
     </div>
   </div>
@@ -96,3 +107,5 @@
     <a class="mybutton" onclick="">Next</a>
   </div>
 </div>
+
+<script src="../js/modal.js"></script>
