completely did ajax request

--- a/html/upload.html
+++ b/html/upload.html
@@ -37,20 +37,58 @@
             </div>
         </header>
         <section class="formCont">
-            <form enctype="multipart/form-data" action="http://localhost:3000/articles" method="POST">
+            <div class="form">
                     <!-- <button class="btn">Upload a file</button> -->
                 <input class="uplBut" type="file" enctype="multipart/form-data" name="image" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])"><br>
                 <input class="inpText" type="text" placeholder="Name" id="name" name="name" maxlength="16" required><br>
                 <input class="inpText" type="text" placeholder="Year" id="year" name="year" maxlength="4" required><br>
                 <input class="inpText" type="text" placeholder="Brand" id="brand" name="brand" required><br>
-                <input class="inpText" type="text" placeholder="Alcholic" id="alcoholic" name="alcoholic" required><br>
+                <input class="inpText" type="text" id="alcoholic" name="alcoholic" required><br>
                 <input class="inpText" type="text" placeholder="Country" id="country" name="country" required><br>
                 <textarea class="inpText" type="text" placeholder="Description" id="description" name="description" rows="5" required></textarea><br>
                 <input class="inpText" type="text" placeholder="Current State" id="currentState" name="currentState"><br><br><br>
-                <input class="inpSub" onclick="send()" type="submit"><br>
-            </form>
+                <button class="inpSub" type="submit" id="inpsub">Send<br>
+            </div>
             <img id="blah"/><br>
         </section>
+        <script>
+            const form = {
+                name: document.getElementById('name'),
+                year: document.getElementById('year'),
+                brand: document.getElementById('brand'),
+                alcoholic: document.getElementById('alcoholic'),
+                country: document.getElementById('country'),
+                description: document.getElementById('description'),
+                currentState: document.getElementById('currentState'),
+                submit: document.getElementById('inpsub')
+            };
+
+            // console.log(form);
+
+            form.submit.addEventListener('click', () => {
+                const request = new XMLHttpRequest();
+                request.onload = () => {
+                    console.log(request.responseText);
+                    let respObj = JSON.parse(request.responseText);
+                    console.log(respObj);
+                };
+                const requestData = {
+                    name: form.name.value,
+                    year: form.year.value,
+                    brand: form.brand.value,
+                    country: form.country.value,
+                    description: form.description.value,
+                    currentState: form.currentState.value
+                };
+                console.log(requestData);
+                request.open('POST', 'http://localhost:3000/articles', true);
+                
+                request.getResponseHeader('Access-Control-Allow-Origin', '*');
+                request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
+                request.setRequestHeader('Content-Type', 'application/json');
+                request.send(JSON.stringify(requestData));
+            });
+        </script>
     </body>
 
 
