completed more endpoints

--- a/html/upload.html
+++ b/html/upload.html
@@ -71,6 +71,7 @@
                     console.log(request.responseText);
                     let respObj = JSON.parse(request.responseText);
                     console.log(respObj);
+                    // location.href = 'noutati.html';
                 };
                 const requestData = {
                     name: form.name.value,
