--- a/index.html
+++ b/index.html
@@ -163,6 +163,36 @@
             <a href="#">Show more</a>
           </p>
         </div>
+        
+        <div class="container">
+          <img src="./assets/coca.jpeg" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            excepturi ducimus iste consectetur praesentium sed expedita rem error
+            illum commodi.
+            <a href="#">Show more</a>
+          </p>
+        </div>
+        <div class="container">
+          <img src="./assets/jhonniewalker.jpeg" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            excepturi ducimus iste consectetur praesentium sed expedita rem error
+            illum commodi.
+            <a href="#">Show more</a>
+          </p>
+        </div>
+
+        <div class="container">
+          <img src="./assets/lotofcaps.jpeg" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
+            excepturi ducimus iste consectetur praesentium sed expedita rem error
+            illum commodi.
+            <a href="#">Show more</a>
+          </p>
+        </div>
+
       </div>
       <div class="button_container">
         <a class="mybutton" onclick="">Previous</a>
