--- a/html/upload.html
+++ b/html/upload.html
@@ -39,7 +39,7 @@
         <section class="formCont">
             <div class="form">
                     <!-- <button class="btn">Upload a file</button> -->
-                <input class="uplBut" type="file" enctype="multipart/form-data" name="image" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])"><br>
+                <input class="uplBut" type="file" name="image" id="image" onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0])"><br>
                 <input class="inpText" type="text" placeholder="Name" id="name" name="name" maxlength="16" required><br>
                 <input class="inpText" type="text" placeholder="Year" id="year" name="year" maxlength="4" required><br>
                 <input class="inpText" type="text" placeholder="Brand" id="brand" name="brand" required><br>
@@ -60,34 +60,40 @@
                 country: document.getElementById('country'),
                 description: document.getElementById('description'),
                 currentState: document.getElementById('currentState'),
-                submit: document.getElementById('inpsub')
+                submit: document.getElementById('inpsub'),
+                image: document.getElementById('image')
             };
 
             // console.log(form);
 
             form.submit.addEventListener('click', () => {
-                const request = new XMLHttpRequest();
-                request.onload = () => {
-                    console.log(request.responseText);
-                    let respObj = JSON.parse(request.responseText);
-                    console.log(respObj);
-                    // location.href = 'noutati.html';
+                console.log(form.image.files);
+                var fr = new FileReader();
+                fr.onload = function() {
+                    console.log(fr.result);
+                    const request = new XMLHttpRequest();
+                    request.onload = () => {
+                        console.log(request.responseText);
+                        let respObj = JSON.parse(request.responseText);
+                        console.log(respObj);
+                        // location.href = 'noutati.html';
+                    };
+                    const requestData = {
+                        name: form.name.value,
+                        year: form.year.value,
+                        brand: form.brand.value,
+                        country: form.country.value,
+                        description: form.description.value,
+                        currentState: form.currentState.value
+                    };
+                    request.open('POST', 'http://localhost:3000/articles', true);
+                    
+                    request.getResponseHeader('Access-Control-Allow-Origin', '*');
+                    request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
+                    request.setRequestHeader('Content-Type', 'application/json');
+                    request.send(JSON.stringify(requestData));
                 };
-                const requestData = {
-                    name: form.name.value,
-                    year: form.year.value,
-                    brand: form.brand.value,
-                    country: form.country.value,
-                    description: form.description.value,
-                    currentState: form.currentState.value
-                };
-                console.log(requestData);
-                request.open('POST', 'http://localhost:3000/articles', true);
-                
-                request.getResponseHeader('Access-Control-Allow-Origin', '*');
-                request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
-                request.setRequestHeader('Content-Type', 'application/json');
-                request.send(JSON.stringify(requestData));
+                fr.readAsBinaryString(form.image.files[0]);
             });
         </script>
     </body>
