--- a/html/login.html
+++ b/html/login.html
@@ -1,27 +1,44 @@
-    <div class="login-page">
-        <div class="container">
-            <div class="switch-bar">
-                <div class="switch-login active-form" onclick="onClickLogin(event)">
-                    <span class="switch-button-text">Login</span>
-                </div>
-                <div class="switch-register" onclick="onClickRegister(event)">
-                    <span class="switch-button-text">Register</span>
-                </div>
-            </div>
-            <div class="container-form">
-              <form class="login-form">
-                <div class="inputs">
-                  <label for="email" class="labels">E-mail</label>
-                  <input name="email" type="email" placeholder="test@test.com">
-                  <label for="password" class="labels">Password</label>
-                  <input name="password" type="password" placeholder="password">
-                  <label for="confirmation" class="labels confirm hide">Confirm password</label>
-                  <input name="confirmation" type="password" placeholder="same password" class="confirm hide">
-                </div>
-                <button type="submit" class="submit-button">Submit</button>
-              </form>
-            </div>
-        </div>
-    </div>
 
 
+
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>COLWR</title>
+      <link rel="stylesheet" href="../index.css">
+      <link rel="stylesheet" href="../css/login.css"> 
+    </head>
+    <body>
+      <div id="app-content">
+        <div class="login-page">
+          <div class="container">
+              <div class="switch-bar">
+                  <div class="switch-login active-form" onclick="onClickLogin(event)">
+                      <span class="switch-button-text">Login</span>
+                  </div>
+                  <div class="switch-register" onclick="onClickRegister(event)">
+                      <span class="switch-button-text">Register</span>
+                  </div>
+              </div>
+              <div class="container-form">
+                <form id="auth-form" onsubmit="onSubmit(event)">
+                  <div class="inputs">
+                    <label for="email" class="labels">E-mail</label>
+                    <input name="email" type="email" placeholder="Ex: test@test.com" id="email-input">
+                    <label for="password" class="labels" >Password</label>
+                    <input name="password" type="password" placeholder="Ex: myPassword" id="password-input">
+                    <label for="fullName" class="labels full-name-group hide">Your full name</label>
+                    <input name="fullName" type="text" placeholder="Ex: Popescu Ion" class="full-name-group hide" id="full-name-input">
+                  </div>
+                  <button type="submit" class="submit-button">Submit</button>
+                </form>
+              </div>
+          </div>
+      </div>
+      </div>
+      <script src="../index.js"></script>
+      <script type="text/javascript" src='../js/login.js'></script>
+    </body>
+    </html>
