--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
       <div>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+          <div style="margin-top: 200px ;">
             <a href="#">News</a>
-            <a href="#">Export</a>
+            <a href="./html/export.html">Export</a>
             <a href="#">My articles</a>
-            <a href="#">Contact</a>
+          </div>
         </div>
         <div>
             <img src="./assets/logo.svg" id="miniLogo"></img>
         </div>
         <div id="userLogin">
-            <!-- <a href="#" id="userLogin"> -->
                 <span>
                     <div>Login</div>
                     <img src="./assets/user.svg" alt="Login"></img>
                 </span>
-            <!-- </a> -->
         </div> 
         <div class="headerMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">
             <div class="hamburger"></div>
@@ -36,10 +35,9 @@
     </div>
     </header>
 
-    <!-- <div id="gallery"></div> -->
 
     <div class="PageHeader">
-      <p id="headerTitle">Articles</p>
+      <p id="headerTitle">News</p>
       <div class="sticky-bar">
         <button onclick="dropdown()"><span>Filters</span></button>
         
