--- a/index.html
+++ b/index.html
@@ -214,4 +214,5 @@
   <script src="./js/dropdown.js"></script>
   <script src="./js/shrinkHeaderTitle.js"></script>
   <script src="./js/modal.js"></script>
+  <script src="./js/index.js"></script>
 </html>
