--- a/html/upload.html
+++ b/html/upload.html
@@ -6,28 +6,21 @@
         <title>Upload</title>
         <script src="../js/HamburgerMenu.js"></script>
         <link rel="stylesheet" href="../css/upload.css">
-        <link rel="stylesheet" href="../css/noutati.css">
+        
     </head>
     <body>
         <header>
             <div>
                 <div id="mySidenav" class="sidenav">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                    <a href="#">Noutati</a>
-                    <a href="#">Postari</a>
-                    <a href="#">Statistici</a>
-                    <a href="#">Contact</a>
+                  <div style="margin-top: 200px ;">
+                    <a href="../index.html">Home</a>
+                    <a href="../html/export.html">Export</a>
+                    <a href="../html/upload.html">Upload article</a>
+                  </div>
                 </div>
                 <div>
                     <img src="../assets/logo.svg" id="miniLogo"></img>
-                </div>
-                <div>
-                    <a href="#" id="userLogin">
-                        <span>
-                            <div>Login</div>
-                            <img src="../assets/user.svg" alt="Login"></img>
-                        </span>
-                    </a>
                 </div> 
                 <div class="headerMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">
                     <div class="hamburger"></div>
@@ -137,6 +130,8 @@
             
             });
         </script>
+        <script src="../js/shrinkHeaderTitle.js"></script>
+        <script src="../js/HamburgerMenu.js"></script>
     </body>
 
 
