--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
           <div style="margin-top: 200px ;">
-            <a href="#">News</a>
+            <a href="./index.html">Home</a>
             <a href="./html/export.html">Export</a>
-            <a href="#">My articles</a>
+            <a href="./html/upload.html">Upload article</a>
           </div>
         </div>
         <div>
@@ -37,7 +37,7 @@
 
 
     <div class="PageHeader">
-      <p id="headerTitle">News</p>
+      <p id="headerTitle">Articles</p>
       <div class="sticky-bar">
         <button onclick="dropdown()"><span>Filters</span></button>
         
