--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
             <img src="./assets/logo.svg" id="miniLogo"></img>
         </div>
-        <div id="userLogin">
+        <div id="userLogin" onclick="navigateToLogin()">
                 <span>
                     <div>Login</div>
                     <img src="./assets/user.svg" alt="Login"></img>
@@ -214,5 +214,5 @@
   <script src="./js/dropdown.js"></script>
   <script src="./js/shrinkHeaderTitle.js"></script>
   <script src="./js/modal.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="./index.js"></script>
 </html>
