--- a/html/upload.html
+++ b/html/upload.html
@@ -116,58 +116,43 @@
           description: document.getElementById('description'),
           currentState: document.getElementById('currentState'),
           submit: document.getElementById('inpsub'),
+
           image: document.getElementById('image')
       };
 
       // console.log(form);
 
-      form.submit.addEventListener('click', () => {
-          var fr = new FileReader();
-          fr.onload = function () {
-              // const request = new XMLHttpRequest();
-              // request.onload = () => {
-              //     console.log(request.responseText);
-              //     let respObj = JSON.parse(request.responseText);
-              //     console.log(respObj);
-              //     // location.href = 'noutati.html';
-              // };
-              // const requestData = {
-              //     name: form.name.value,
-              //     year: form.year.value,
-              //     brand: form.brand.value,
-              //     country: form.country.value,
-              //     description: form.description.value,
-              //     currentState: form.currentState.value,
-              //     image: fr.result.split(`;base64,`)[1]
-              // };
+            form.submit.addEventListener('click', () => {
+                var request = new XMLHttpRequest();
 
-              // // var fd = new FormData();
-              // // for (var key in requestData) {
-              // //     fd.append(key, requestData[key]);
-              // // }
-              // // fd.append('image', form.image.files[0]);
-              // request.open('POST', 'http://localhost:3000/articles', true);
+                var requestData = {
+                    'name': form.name.value,
+                    'year': form.year.value,
+                    'brand': form.brand.value,
+                    'alcoholic': form.alcoholic.value,
+                    'country': form.country.value,
+                    'description': form.description.value,
+                    'currentState': form.currentState.value,
+                }
 
-              // request.getResponseHeader('Access-Control-Allow-Origin', '*');
-              // request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
-              // request.setRequestHeader('Content-Type', 'application/json');
-              // console.log(requestData.image.length);
-              // request.send(JSON.stringify(requestData));
-              };
-          fr.readAsDataURL(form.image.files[0]);
+                request.onload = function () {
+                    console.log('we got response');
+                    console.log(request.responseText);
+                };
 
                 var fd = new FormData();
                 for (var key in requestData) {
                     fd.append(key, requestData[key]);
+
                 }
                 fd.append('image', form.image.files[0]);
-                request.open('POST', 'http://localhost:3000/articles', true);
+                request.open('GET', 'http://localhost:3000/articles', true);
                 
                 request.getResponseHeader('Access-Control-Allow-Origin', '*');
                 request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
                 // request.setRequestHeader('Content-Type', 'application/json');
                 // console.log(requestData.image.length);
-                request.send(fd);
+                request.send();
 
                 
                 // request.setRequestHeader('Content-Type', 'application/json');
@@ -176,19 +161,6 @@
             });
         </script>
     </body>
-
-          request.getResponseHeader('Access-Control-Allow-Origin', '*');
-          request.getAllResponseHeaders('Access-Control-Allow-Origin', '*');
-          // request.setRequestHeader('Content-Type', 'application/json');
-          // console.log(requestData.image.length);
-          request.send(fd);
-
-
-          request.setRequestHeader('Content-Type', 'application/json');
-          request.send(JSON.stringify(requestData));
-
-      });
-    </script>
     <script src="../js/shrinkHeaderTitle.js"></script>
     <script src="../js/HamburgerMenu.js"></script>
   </body>
