valid upload html plus documentatie

--- a/html/upload.html
+++ b/html/upload.html
@@ -87,7 +87,6 @@
         /><br />
         <textarea
           class="inpText"
-          type="text"
           placeholder="Description"
           id="description"
           name="description"
@@ -159,9 +158,8 @@
                 // request.send(JSON.stringify(requestData));
             
             });
-        </script>
-    </body>
-    <script src="../js/shrinkHeaderTitle.js"></script>
+      </script>
+    <!-- <script src="../js/shrinkHeaderTitle.js"></script> -->
     <script src="../js/HamburgerMenu.js"></script>
   </body>
 </html>
