--- a/html/login.html
+++ b/html/login.html
@@ -38,7 +38,7 @@
           </div>
       </div>
       </div>
-      <script src="../index.js"></script>
+      <!-- <script src="../index.js"></script> -->
       <script type="text/javascript" src='../js/login.js'></script>
     </body>
     </html>
