--- a/index.html
+++ b/index.html
@@ -23,22 +23,8 @@
         <div>
           <img src="./assets/logo.svg" id="miniLogo" alt="" />
         </div>
-<<<<<<< HEAD
-        <div id="userLogin" onclick="navigateToLogin()">
-                <span>
-                    <div>Login</div>
-                    <img src="./assets/user.svg" alt="Login"></img>
-                </span>
-        </div> 
-        <div class="headerMenu" style="font-size:30px;cursor:pointer" onclick="openNav()">
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-        </div>        
-    </div>
-=======
         <div id="userLogin">
-          <div class="cnt">
+          <div class="cnt" onclick="navigateToLogin()">
             <div>Login</div>
             <img src="./assets/user.svg" alt="Login" />
           </div>
@@ -53,7 +39,6 @@
           <div class="hamburger"></div>
         </div>
       </div>
->>>>>>> 5f8e483227242a943e248b74ec6c805c0e1d411d
     </header>
 
     <div class="PageHeader">
@@ -213,13 +198,4 @@
     <script src="./js/modal.js"></script>
     <script src="./index.js"></script>
   </body>
-<<<<<<< HEAD
-  <!-- <script src="./js/ajax/ajax_content_loader.js"></script> -->
-  <script src="./js/HamburgerMenu.js"></script>
-  <script src="./js/dropdown.js"></script>
-  <script src="./js/shrinkHeaderTitle.js"></script>
-  <script src="./js/modal.js"></script>
-  <script src="./index.js"></script>
-=======
->>>>>>> 5f8e483227242a943e248b74ec6c805c0e1d411d
 </html>
